update the logo

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="relative group">
                 <div class="absolute -inset-1 bg-gradient-to-r from-primary/20 to-blue-400/20 rounded-2xl blur opacity-25 group-hover:opacity-50 transition duration-1000"></div>
                 <div class="relative bg-white p-6 rounded-2xl shadow-xl border border-stone-100 flex items-center justify-center">
-                    <img src="image_4bdf6b.png" alt="Seabloom Tile Services Logo" class="h-24 md:h-32 w-auto object-contain logo-shadow" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                    <img src="seabloom-logo.png" alt="Seabloom Tile Services Logo" class="h-24 md:h-32 w-auto object-contain logo-shadow" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                     <!-- Fallback if image doesn't load immediately -->
                     <div class="hidden text-center py-4 px-8">
                         <i class="fa-solid fa-layer-group text-primary text-4xl mb-2"></i>
@@ -273,7 +273,7 @@
             <div class="flex flex-col md:flex-row justify-between items-start md:items-center mb-12">
                 <div class="mb-8 md:mb-0">
                     <div class="flex items-center mb-2">
-                        <img src="image_4bdf6b.png" alt="Seabloom Logo" class="h-10 w-auto mr-3" onerror="this.style.display='none';">
+                        <img src="seabloom-logo.png" alt="Seabloom Logo" class="h-10 w-auto mr-3" onerror="this.style.display='none';">
                         <span class="font-black text-2xl text-primary tracking-tighter">Seabloom</span>
                     </div>
                     <p class="text-slate-400 font-medium max-w-xs">High-end tile craftsmanship without the premium markup.</p>
@@ -333,4 +333,5 @@
         }
     </script>
 </body>
+
 </html>
