--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="relative group">
                         <div class="absolute -inset-1 bg-gradient-to-r from-primary/20 to-blue-400/20 rounded-2xl blur opacity-25 group-hover:opacity-50 transition duration-1000"></div>
                         <div class="relative bg-white p-6 rounded-2xl shadow-xl border border-stone-100 flex items-center justify-center">
-                            <img src="image_4bdf6b.png" alt="Seabloom Logo" class="h-24 md:h-32 w-auto object-contain logo-shadow" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                            <img src="seabloom-logo.png" alt="Seabloom Logo" class="h-24 md:h-32 w-auto object-contain logo-shadow" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                             <div class="hidden text-center py-4 px-8">
                                 <i class="fa-solid fa-layer-group text-primary text-4xl mb-2"></i>
                                 <p class="font-bold text-xl text-primary">SEABLOOM</p>
@@ -367,3 +367,4 @@
     </script>
 </body>
 </html>
+
