Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -80,41 +80,7 @@
     <main id="main-content">
         <!-- Home Page -->
         <div id="page-home" class="page-view">
-            <!-- Hero Section --><!-- Video Section -->
-<section class="py-24 bg-cream">
-    <div class="max-w-5xl mx-auto px-6 text-center">
-        <h2 class="text-4xl font-black text-slate-900 mb-6">
-            Who We Are
-        </h2>
-        <p class="text-slate-600 text-lg max-w-2xl mx-auto mb-12">
-            Learn more about SeaBloom, our mission, and the work we do to create lasting impact.
-        </p>
-
-        <!-- Video Container -->
-        <div class="relative aspect-video rounded-3xl overflow-hidden shadow-2xl bg-black">
-            <!-- OPTION A: YouTube / Vimeo -->
-            <!-- Replace VIDEO_ID with your real ID -->
-            <iframe 
-                class="w-full h-full"
-                src="https://www.youtube.com/embed/VIDEO_ID"
-                title="SeaBloom Introduction Video"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-            </iframe>
-
-            <!-- OPTION B: Local video file (comment out iframe if using this) -->
-            <!--
-            <video controls class="w-full h-full object-cover">
-                <source src="seabloom-video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            -->
-        </div>
-    </div>
-</section>
-
-            <section class="pt-32 pb-12 px-4 sm:px-6 lg:px-8 max-w-7xl mx-auto text-center fade-in">
+            <!-- Hero Section -->   <section class="pt-32 pb-12 px-4 sm:px-6 lg:px-8 max-w-7xl mx-auto text-center fade-in">
                 <span class="inline-block py-1.5 px-4 rounded-full bg-blue-50 text-primary text-xs font-bold mb-8 border border-primary/10 shadow-sm">
                     <i class="fa-solid fa-certificate mr-1.5"></i> PREMIUM QUALITY CRAFTSMANSHIP
                 </span>
@@ -147,6 +113,39 @@
                     </button>
                 </div>
             </section>
+<!-- Video Section -->
+<section class="py-24 bg-cream">
+    <div class="max-w-5xl mx-auto px-6 text-center">
+        <h2 class="text-4xl font-black text-slate-900 mb-6">
+            Who We Are
+        </h2>
+        <p class="text-slate-600 text-lg max-w-2xl mx-auto mb-12">
+            Learn more about SeaBloom, our mission, and the work we do to create lasting impact.
+        </p>
+
+        <!-- Video Container -->
+        <div class="relative aspect-video rounded-3xl overflow-hidden shadow-2xl bg-black">
+            <!-- OPTION A: YouTube / Vimeo -->
+            <!-- Replace VIDEO_ID with your real ID -->
+            <iframe 
+                class="w-full h-full"
+                src="https://www.youtube.com/embed/VIDEO_ID"
+                title="SeaBloom Introduction Video"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+
+            <!-- OPTION B: Local video file (comment out iframe if using this) -->
+            <!--
+            <video controls class="w-full h-full object-cover">
+                <source src="seabloom-video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            -->
+        </div>
+    </div>
+</section>
 
             <!-- Services Grid -->
             <section id="services" class="py-24 bg-white relative">
@@ -400,6 +399,7 @@
     </script>
 </body>
 </html>
+
 
 
 
