Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-20"> 
                 <div class="flex items-center cursor-pointer" onclick="showPage('home')">
-                    <div class="w-10 h-10 mr-3 flex items-center justify-center bg-primary rounded-lg shadow-sm">
-                        <i class="fa-solid fa-layer-group text-white text-xl"></i>
-                    </div>
+                   <img src="seabloom-logo.png" alt="SeaBloom Logo" class="h-16 w-auto mr-3">
+
                     <div class="flex flex-col">
                         <span class="font-bold text-2xl text-primary leading-tight tracking-tight">Seabloom</span>
                         <span class="text-[10px] text-slate-500 font-bold uppercase tracking-widest">Tile Services</span>
@@ -88,7 +87,7 @@
                 <div class="flex justify-center mb-10">
                     <div class="relative group">
         
-                        <div class="relative bg-white p-6 rounded-2xl shadow-xl border border-stone-100 flex items-center justify-center">
+<div class="relative flex items-center justify-center">
                             <img src="seabloom-logo.png" alt="Seabloom Logo" class="h-24 md:h-32 w-auto object-contain logo-shadow" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                             <div class="hidden text-center py-4 px-8">
                                 <i class="fa-solid fa-layer-group text-primary text-4xl mb-2"></i>
@@ -342,9 +341,8 @@
             <div class="max-w-7xl mx-auto px-6">
                 <div class="flex flex-col md:flex-row justify-between items-center mb-12 text-center md:text-left">
                     <div class="flex items-center mb-8 md:mb-0">
-                        <div class="w-10 h-10 mr-3 flex items-center justify-center bg-primary rounded-lg shadow-sm">
-                            <i class="fa-solid fa-layer-group text-white"></i>
-                        </div>
+                        <img src="seabloom-logo.png" alt="SeaBloom Logo" class="h-12 w-auto mr-3">
+
                         <span class="font-black text-2xl text-primary tracking-tighter">Seabloom</span>
                     </div>
                     <div class="flex flex-wrap justify-center gap-6 md:gap-10 text-sm font-bold text-slate-500 uppercase tracking-widest">
@@ -399,6 +397,7 @@
     </script>
 </body>
 </html>
+
 
 
 
